@@ -656,7 +656,7 @@ execute_menu_command (WEdit *edit_widget, const char *commands)
     chmod (file_name, S_IRWXU);
     if (run_view) {
 	run_view = 0;
-	view (file_name, 0, &run_view, 0);
+	mc_internal_viewer (file_name, NULL, &run_view, 0);
     } else {
 	/* execute the command indirectly to allow execution even
 	 * on no-exec filesystems. */
